@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-27T16:00:45Z",
-  "count_outdated" : 3632,
-  "uniques_outdated" : 1615,
-  "count" : 3792,
-  "uniques" : 1721,
+  "timestamp" : "2024-01-28T08:07:05Z",
+  "count_outdated" : 3635,
+  "uniques_outdated" : 1618,
+  "count" : 3793,
+  "uniques" : 1722,
   "clones" : [
-    {
-      "timestamp": "2024-01-14T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2024-01-15T00:00:00Z",
       "count": 2,
@@ -121,6 +112,15 @@
       "uniques": 20,
       "uniques_minmax": [ 7, 20 ],
       "uniques_decinc": [ 0, 20 ]
+    },
+    {
+      "timestamp": "2024-01-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
