@@ -1,12 +1,7 @@
 {
-  "count": 160,
-  "uniques": 76,
+  "count": 158,
+  "uniques": 74,
   "clones": [
-    {
-      "timestamp": "2024-01-14T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
     {
       "timestamp": "2024-01-15T00:00:00Z",
       "count": 2,
@@ -66,6 +61,11 @@
       "timestamp": "2024-01-27T00:00:00Z",
       "count": 36,
       "uniques": 20
+    },
+    {
+      "timestamp": "2024-01-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
