@@ -1,3 +1,12 @@
+2024-01-28T08:07:05Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7684404142 # 64
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-28
+* notice: last 14d: unq all: 74 158
+* notice: prev accum: outdated-unq outdated-all / unq all: 1615 3632 / 1721 3792
+* notice: next accum: outdated-unq outdated-all / unq all: 1618 3635 / 1722 3793
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-01-14] / [2024-01-28]
+
 2024-01-27T16:00:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7679671877 # 62
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
